--- a/app/src/main/res/layout/activity_subject_list.xml
+++ b/app/src/main/res/layout/activity_subject_list.xml
@@ -11,5 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="8sp"
-        tools:layout_editor_absoluteY="8sp" />
+        tools:layout_editor_absoluteY="8sp"
+        />
 </RelativeLayout>
