--- a/app/src/main/res/layout/custom_listview.xml
+++ b/app/src/main/res/layout/custom_listview.xml
@@ -15,6 +15,7 @@
         android:textSize="30sp"
         android:textStyle="bold"
         android:layout_marginTop="2sp"
+        android:textColor="#000000"
         android:background="@drawable/listbackground"
         android:layout_weight="0.01" />
 </LinearLayout>
