--- a/app/src/main/res/layout/custom_listview.xml
+++ b/app/src/main/res/layout/custom_listview.xml
@@ -10,12 +10,12 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="60sp"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:textStyle="bold"
         android:layout_marginTop="2sp"
+        android:layout_weight="0.09"
+        android:background="#F55E1E"
+        android:text="TextView"
+        android:gravity="center"
         android:textColor="#000000"
-        android:background="@drawable/listbackground"
-        android:layout_weight="0.01" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
 </LinearLayout>
